- CLI flag parsing now preserves missing-value semantics when a value flag is followed by another flag token (for example `--out --adapter ...`) instead of mis-parsing the next flag as a value.
- `safe-run` now fails closed on duplicate singleton flags (for example repeated `--adapter` or repeated `--out`) instead of silently using the last value.
- New adapter discovery command: `weftend adapter list`
- Additive receipt/summary surface:
- `safe_run_receipt.json` optional `adapter` metadata block
- `contentSummary.adapterSignals` optional deterministic adapter signal block
- Optional adapter artifacts in run output:
- `analysis/adapter_summary_v0.json`
- `analysis/adapter_findings_v0.json`
- Package/extension ZIP metadata extraction deepened for deterministic manifest signals:
- `.msix/.nupkg/.whl/.jar` manifest text hints are now extracted from ZIP entries (bounded, analysis-only).
- `.crx/.vsix` now parse `manifest.json` when present in ZIP payloads (permissions/content scripts/update URL domain hints).
- `.xpi` extension bundles are now supported through the same deterministic ZIP-manifest path.
- Linux package coverage added to package adapter:
- `.deb` now parses deterministic AR entry metadata (bounded, no extraction/exec).
- `.rpm` now captures deterministic lead/header/script/signing hint counters from local bytes only.
- `.appimage` now captures deterministic ELF/runtime header hints (analysis-only; execution withheld).
- Archive/package tar coverage expanded:
- `.tar.xz/.txz` now follow explicit tar-plugin, fail-closed handling in archive/package lanes.
- macOS installer coverage added to package adapter:
- `.pkg` now captures deterministic XAR header and script/permission hint counters.
- `.dmg` now captures deterministic trailer marker hints (`koly`) without mounting.
- Document adapter deepened for `.docm/.xlsm`:
- ZIP structure + relationships are inspected deterministically for macro/embed/external-link indicators.