@@ -22,6 +22,7 @@ Hard rules
 - If plugin is enabled but unavailable, run fails with explicit code.
 - If an unknown plugin name is provided, run fails closed with `ADAPTER_PLUGIN_UNKNOWN`.
 - Unknown plugin-name validation runs before adapter routing and still fails closed under `--adapter none`.
+- If `--adapter none` is selected, any plugin flag is invalid and fails closed with `ADAPTER_PLUGIN_UNUSED`.
 
 5) No silent downgrade
 - Missing plugin support never silently claims full analysis coverage.
